--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -172,12 +172,14 @@
   "Duration": "Длительность",
   "Distance": "Дистанция",
   "customize": "Настройки списков",
-  "customItemsInstructions": "Введите свой текст или нажмите на пункт и используйте стрелки, чтобы изменить порядок в списке",
+  "customItemsInstructions": "Введите свой текст или нажмите на пункт ниже и используйте стрелки, чтобы изменить порядок в списке",
   "customItemText": "Свой текст",
   "itemAlreadyInTheList": "Етот пункт уже в списке",
   "resetToDefaults": "Вернуть список по умолчанию",
   "tapToSelect": "Нажмите чтобы выбрать",
   "pickValue": "выберете",
+  "widgetOrder": "Порядок Виджетов",
+  "widgetOrderInstructions": "Нажмите на пункт ниже и используйте стрелки, чтобы изменить порядок кнопок для добавления новых виджетов на главном экране",
   "Walking": "Ходьба",
   "Dancing": "Танцы",
   "Running": "Бег",
