--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -172,12 +172,14 @@
   "Duration": "Duration",
   "Distance": "Distance",
   "customize": "Customize",
-  "customItemsInstructions": "Enter your custom items or tap an item and use the arrows to re-order the list",
+  "customItemsInstructions": "Enter your custom items or tap an item below and use the arrows to re-order the list",
   "customItemText": "Custom item text",
   "itemAlreadyInTheList": "This item is already in the list",
   "resetToDefaults": "Reset to default",
   "tapToSelect": "Tap to select below",
   "pickValue": "pick value",
+  "widgetOrder": "Widget Order",
+  "widgetOrderInstructions": "Tap an item below and use the arrows to re-order the buttons used for adding new widgets on the home screen",
   "Walking": "Walking",
   "Dancing": "Dancing",
   "Running": "Running",
