add: new widgets Stress and Medicine update: insights screen sort order

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -15,6 +15,9 @@
   "meditation": "Meditation",
   "meditate": "Meditate",
   "period": "Period",
+  "stress": "Stress",
+  "med": "Med",
+  "medicine": "Medicine",
   "images": "Images",
   "notes": "Notes",
   "moods": "Moods",
@@ -187,12 +190,21 @@
   "Surfing": "Surfing",
   "Yoga": "Yoga",
   "Biking": "Biking",
-  "Playing Sports": "Playing Sports",
+  "PlayingSports": "Playing Sports",
   "Writing": "Writing",
   "Drawing": "Drawing",
   "Painting": "Painting",
   "Crafting": "Crafting",
   "Playing": "Playing",
   "Singing": "Singing",
-  "Workout": "Workout"
+  "Workout": "Workout",
+  "Painkiller": "Painkiller",
+  "SleepAid": "Sleep aid",
+  "BloodPressure": "Blood pressure regulator",
+  "Cholesterol": "Cholesterol lowering",
+  "Antacid": "Antacid",
+  "Antibiotic": "Antibiotic",
+  "AntiDiabetic": "Anti-diabetic",
+  "AntiAnxiety": "Anti-anxiety",
+  "Antidepressant": "Antidepressant"
 }
