--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -15,6 +15,9 @@
   "meditation": "Медитация",
   "meditate": "Медитация",
   "period": "Месячные",
+  "stress": "Стресс",
+  "med": "Мед",
+  "medicine": "Медикаменты",
   "images": "Фото",
   "notes": "Записи",
   "moods": "Настроения",
@@ -187,12 +190,21 @@
   "Surfing": "Серф",
   "Yoga": "Йога",
   "Biking": "Велосипед",
-  "Playing Sports": "Спорт Игры",
+  "PlayingSports": "Спорт Игры",
   "Writing": "Писание",
   "Drawing": "Рисование",
   "Painting": "Живопись",
   "Crafting": "Crafting",
   "Playing": "Игра на музыкальных инструментах",
   "Singing": "Пение",
-  "Workout": "Тренировка"
+  "Workout": "Тренировка",
+  "Painkiller": "Болеутоляющее",
+  "SleepAid": "Снотворное",
+  "BloodPressure": "Регулятор давления",
+  "Cholesterol": "Снижение холестерина",
+  "Antacid": "Антацид",
+  "Antibiotic": "Антибиотик",
+  "AntiDiabetic": "Антидиабетический",
+  "AntiAnxiety": "Успокаивающее",
+  "Antidepressant": "Антидепрессант"
 }
