add: German language

--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -5,19 +5,6 @@
   "mood": "Humeur",
   "sleep": "Sommeil",
   "image": "Image",
-  "water": "Water",
-  "waterIntake": "Water Intake",
-  "movement": "Movement",
-  "move": "Move",
-  "creativity": "Creativity",
-  "create": "Create",
-  "meditationMinutes": "Meditation (minutes)",
-  "meditation": "Meditation",
-  "meditate": "Meditate",
-  "period": "Period",
-  "stress": "Stress",
-  "med": "Med",
-  "medicine": "Medicine",
   "images": "Images",
   "notes": "Notes",
   "moods": "Humeurs",
@@ -172,8 +159,21 @@
   "Minutes": "min",
   "Kilometers": "km",
   "Miles": "mi",
-  "Duration": "Duration",
-  "Distance": "Distance",
+  "water": "Water",
+  "waterIntake": "Water Intake",
+  "movement": "Movement",
+  "move": "Move",
+  "creativity": "Creativity",
+  "create": "Create",
+  "meditationMinutes": "Meditation (minutes)",
+  "meditation": "Meditation",
+  "meditate": "Meditate",
+  "period": "Period",
+  "stress": "Stress",
+  "med": "Med",
+  "medicine": "Medicine",
+  "duration": "Duration",
+  "distance": "Distance",
   "customize": "Customize",
   "customItemsInstructions": "Enter your custom items or tap an item below and use the arrows to re-order the list",
   "customItemText": "Custom item text",
@@ -183,28 +183,28 @@
   "pickValue": "pick value",
   "widgetOrder": "Widget Order",
   "widgetOrderInstructions": "Tap an item below and use the arrows to re-order the buttons used for adding new widgets on the home screen",
-  "Walking": "Walking",
-  "Dancing": "Dancing",
-  "Running": "Running",
-  "Swimming": "Swimming",
-  "Surfing": "Surfing",
-  "Yoga": "Yoga",
-  "Biking": "Biking",
-  "PlayingSports": "Playing Sports",
-  "Writing": "Writing",
-  "Drawing": "Drawing",
-  "Painting": "Painting",
-  "Crafting": "Crafting",
-  "Playing": "Playing",
-  "Singing": "Singing",
-  "Workout": "Workout",
-  "Painkiller": "Painkiller",
-  "SleepAid": "Sleep aid",
-  "BloodPressure": "Blood pressure regulator",
-  "Cholesterol": "Cholesterol lowering",
-  "Antacid": "Antacid",
-  "Antibiotic": "Antibiotic",
-  "AntiDiabetic": "Anti-diabetic",
-  "AntiAnxiety": "Anti-anxiety",
-  "Antidepressant": "Antidepressant"
+  "walking": "Walking",
+  "dancing": "Dancing",
+  "running": "Running",
+  "swimming": "Swimming",
+  "surfing": "Surfing",
+  "yoga": "Yoga",
+  "biking": "Biking",
+  "playingSports": "Playing Sports",
+  "writing": "Writing",
+  "drawing": "Drawing",
+  "painting": "Painting",
+  "crafting": "Crafting",
+  "playing": "Playing",
+  "singing": "Singing",
+  "workout": "Workout",
+  "painkiller": "Painkiller",
+  "sleepAid": "Sleep aid",
+  "bloodPressure": "Blood pressure regulator",
+  "cholesterol": "Cholesterol lowering",
+  "antacid": "Antacid",
+  "antibiotic": "Antibiotic",
+  "antiDiabetic": "Anti-diabetic",
+  "antiAnxiety": "Anti-anxiety",
+  "antidepressant": "Antidepressant"
 }
