--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -5,19 +5,6 @@
   "mood": "Настроение",
   "sleep": "Сон",
   "image": "Фото",
-  "water": "Вода",
-  "waterIntake": "Вода",
-  "movement": "Движение",
-  "move": "Движение",
-  "creativity": "Творчество",
-  "create": "Творчество",
-  "meditationMinutes": "Медитация (минуты)",
-  "meditation": "Медитация",
-  "meditate": "Медитация",
-  "period": "Месячные",
-  "stress": "Стресс",
-  "med": "Мед",
-  "medicine": "Медикаменты",
   "images": "Фото",
   "notes": "Записи",
   "moods": "Настроения",
@@ -172,8 +159,21 @@
   "Minutes": "min",
   "Kilometers": "km",
   "Miles": "mi",
-  "Duration": "Длительность",
-  "Distance": "Дистанция",
+  "water": "Вода",
+  "waterIntake": "Вода",
+  "movement": "Движение",
+  "move": "Движение",
+  "creativity": "Творчество",
+  "create": "Творчество",
+  "meditationMinutes": "Медитация (минуты)",
+  "meditation": "Медитация",
+  "meditate": "Медитация",
+  "period": "Месячные",
+  "stress": "Стресс",
+  "med": "Мед",
+  "medicine": "Медикаменты",
+  "duration": "Длительность",
+  "distance": "Дистанция",
   "customize": "Настройки списков",
   "customItemsInstructions": "Введите свой текст или нажмите на пункт ниже и используйте стрелки, чтобы изменить порядок в списке",
   "customItemText": "Свой текст",
@@ -183,28 +183,28 @@
   "pickValue": "выберете",
   "widgetOrder": "Порядок Виджетов",
   "widgetOrderInstructions": "Нажмите на пункт ниже и используйте стрелки, чтобы изменить порядок кнопок для добавления новых виджетов на главном экране",
-  "Walking": "Ходьба",
-  "Dancing": "Танцы",
-  "Running": "Бег",
-  "Swimming": "Плавание",
-  "Surfing": "Серф",
-  "Yoga": "Йога",
-  "Biking": "Велосипед",
-  "PlayingSports": "Спорт Игры",
-  "Writing": "Писание",
-  "Drawing": "Рисование",
-  "Painting": "Живопись",
-  "Crafting": "Crafting",
-  "Playing": "Игра на музыкальных инструментах",
-  "Singing": "Пение",
-  "Workout": "Тренировка",
-  "Painkiller": "Болеутоляющее",
-  "SleepAid": "Снотворное",
-  "BloodPressure": "Регулятор давления",
-  "Cholesterol": "Снижение холестерина",
-  "Antacid": "Антацид",
-  "Antibiotic": "Антибиотик",
-  "AntiDiabetic": "Антидиабетический",
-  "AntiAnxiety": "Успокаивающее",
-  "Antidepressant": "Антидепрессант"
+  "walking": "Ходьба",
+  "dancing": "Танцы",
+  "running": "Бег",
+  "swimming": "Плавание",
+  "surfing": "Серф",
+  "yoga": "Йога",
+  "biking": "Велосипед",
+  "playingSports": "Спорт Игры",
+  "writing": "Писание",
+  "drawing": "Рисование",
+  "painting": "Живопись",
+  "crafting": "Crafting",
+  "playing": "Игра на музыкальных инструментах",
+  "singing": "Пение",
+  "workout": "Тренировка",
+  "painkiller": "Болеутоляющее",
+  "sleepAid": "Снотворное",
+  "bloodPressure": "Регулятор давления",
+  "cholesterol": "Снижение холестерина",
+  "antacid": "Антацид",
+  "antibiotic": "Антибиотик",
+  "antiDiabetic": "Антидиабетический",
+  "antiAnxiety": "Успокаивающее",
+  "antidepressant": "Антидепрессант"
 }
