add: more translations

--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -159,52 +159,52 @@
   "Minutes": "min",
   "Kilometers": "km",
   "Miles": "mi",
-  "water": "Water",
-  "waterIntake": "Water Intake",
-  "movement": "Movement",
-  "move": "Move",
-  "creativity": "Creativity",
-  "create": "Create",
-  "meditationMinutes": "Meditation (minutes)",
+  "water": "Wasser",
+  "waterIntake": "Flüssigkeitsmenge",
+  "movement": "Bewegung",
+  "move": "Bewegung (do you mean to move(verb?) then it would be: bewegen)",
+  "creativity": "Kreativität",
+  "create": "kreieren",
+  "meditationMinutes": "Meditation (Minuten)",
   "meditation": "Meditation",
-  "meditate": "Meditate",
-  "period": "Period",
+  "meditate": "Meditieren",
+  "period": "Periode",
   "stress": "Stress",
-  "med": "Med",
-  "medicine": "Medicine",
-  "duration": "Duration",
-  "distance": "Distance",
-  "customize": "Customize",
-  "customItemsInstructions": "Enter your custom items or tap an item below and use the arrows to re-order the list",
-  "customItemText": "Custom item text",
-  "itemAlreadyInTheList": "This item is already in the list",
-  "resetToDefaults": "Reset to default",
-  "tapToSelect": "Tap to select below",
-  "pickValue": "pick value",
-  "widgetOrder": "Widget Order",
-  "widgetOrderInstructions": "Tap an item below and use the arrows to re-order the buttons used for adding new widgets on the home screen",
-  "walking": "Walking",
-  "dancing": "Dancing",
-  "running": "Running",
-  "swimming": "Swimming",
-  "surfing": "Surfing",
+  "med": "Meds",
+  "medicine": "Medikamente",
+  "duration": "Dauer",
+  "distance": "Entfernung",
+  "customize": "Anpassen",
+  "customItemsInstructions": "Gib deine eigenen Elemente ein oder tippe auf ein Element unten und benutze die Pfeile um die Reihenfolge zu verändern",
+  "customItemText": "Text des personalisierten Elements",
+  "itemAlreadyInTheList": "Dieses Element ist bereits in der Liste",
+  "resetToDefaults": "Zurücksetzen",
+  "tapToSelect": "Zum Auswählen unten tippen",
+  "pickValue": "Wähle den Wert",
+  "widgetOrder": "Widget Reihenfolge",
+  "widgetOrderInstructions": "Tipp auf ein Element unten und verwende die Pfeile um die Reihenfolge auf dem Startbildschirm zu verändern",
+  "walking": "Spazieren gehen",
+  "dancing": "Tanzen",
+  "running": "Laufen",
+  "swimming": "Schwimmen",
+  "surfing": "Surfen",
   "yoga": "Yoga",
-  "biking": "Biking",
-  "playingSports": "Playing Sports",
-  "writing": "Writing",
-  "drawing": "Drawing",
-  "painting": "Painting",
-  "crafting": "Crafting",
-  "playing": "Playing",
-  "singing": "Singing",
-  "workout": "Workout",
-  "painkiller": "Painkiller",
-  "sleepAid": "Sleep aid",
-  "bloodPressure": "Blood pressure regulator",
-  "cholesterol": "Cholesterol lowering",
-  "antacid": "Antacid",
-  "antibiotic": "Antibiotic",
-  "antiDiabetic": "Anti-diabetic",
-  "antiAnxiety": "Anti-anxiety",
-  "antidepressant": "Antidepressant"
+  "biking": "Rad fahren",
+  "playingSports": "Sport treiben",
+  "writing": "Schreiben",
+  "drawing": "Zeichnen",
+  "painting": "Malen",
+  "crafting": "Basteln",
+  "playing": "Spielen",
+  "singing": "Singen",
+  "workout": "Trainieren",
+  "painkiller": "Schmerzmittel",
+  "sleepAid": "Schlafmittel",
+  "bloodPressure": "Blutdruckregler",
+  "cholesterol": "Cholesterin-senkend",
+  "antacid": "Antazidum",
+  "antibiotic": "Antibiotikum",
+  "antiDiabetic": "Antidiabetikum ",
+  "antiAnxiety": " Anti-Angst Mittel",
+  "antidepressant": "Antidepressivum"
 }
