--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -180,7 +180,7 @@
   "itemAlreadyInTheList": "This item is already in the list",
   "resetToDefaults": "Reset to default",
   "tapToSelect": "Tap to select below",
-  "pickValue": "pick value",
+  "pickValue": "Pick value",
   "widgetOrder": "Widget Order",
   "widgetOrderInstructions": "Tap an item below and use the arrows to re-order the buttons used for adding new widgets on the home screen",
   "walking": "Walking",
