--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -159,52 +159,52 @@
   "Minutes": "min",
   "Kilometers": "km",
   "Miles": "mi",
-  "water": "Water",
-  "waterIntake": "Water Intake",
-  "movement": "Movement",
-  "move": "Move",
-  "creativity": "Creativity",
-  "create": "Create",
-  "meditationMinutes": "Meditation (minutes)",
-  "meditation": "Meditation",
-  "meditate": "Meditate",
-  "period": "Period",
+  "water": "Eau",
+  "waterIntake": "Prise d'eau",
+  "movement": "Mouvement",
+  "move": "Bouge toi",
+  "creativity": "Créativité",
+  "create": "Créer",
+  "meditationMinutes": "Méditation (minutes)",
+  "meditation": "Méditation",
+  "meditate": "Méditer",
+  "period": "Règles",
   "stress": "Stress",
   "med": "Med",
-  "medicine": "Medicine",
-  "duration": "Duration",
+  "medicine": "Médicament",
+  "duration": "Durée",
   "distance": "Distance",
-  "customize": "Customize",
-  "customItemsInstructions": "Enter your custom items or tap an item below and use the arrows to re-order the list",
-  "customItemText": "Custom item text",
-  "itemAlreadyInTheList": "This item is already in the list",
-  "resetToDefaults": "Reset to default",
-  "tapToSelect": "Tap to select below",
-  "pickValue": "pick value",
-  "widgetOrder": "Widget Order",
-  "widgetOrderInstructions": "Tap an item below and use the arrows to re-order the buttons used for adding new widgets on the home screen",
-  "walking": "Walking",
-  "dancing": "Dancing",
-  "running": "Running",
-  "swimming": "Swimming",
-  "surfing": "Surfing",
+  "customize": "Personnaliser",
+  "customItemsInstructions": "Entrez vos articles personnalisés ou appuyez sur un élément ci-dessous et utilisez les flèches pour réordonner la liste",
+  "customItemText": "Texte d'élément personnalisé",
+  "itemAlreadyInTheList": "Cet article est déjà dans la liste",
+  "resetToDefaults": "Réinitialiser par défaut",
+  "tapToSelect": "Appuyez sur pour sélectionner ci-dessous",
+  "pickValue": "Choisir la valeur",
+  "widgetOrder": "Widget ordre",
+  "widgetOrderInstructions": "Appuyez sur un élément ci-dessous et utilisez les flèches pour réordonner les boutons utilisés pour ajouter de nouveaux widgets sur l'écran d'accueil",
+  "walking": "Marche",
+  "dancing": "Dance",
+  "running": "En cours",
+  "swimming": "Nage",
+  "surfing": "Surf",
   "yoga": "Yoga",
-  "biking": "Biking",
-  "playingSports": "Playing Sports",
-  "writing": "Writing",
-  "drawing": "Drawing",
-  "painting": "Painting",
+  "biking": "Cyclisme",
+  "playingSports": "Faire du sport",
+  "writing": "Ecriture",
+  "drawing": "Dessin",
+  "painting": "Peinture",
   "crafting": "Crafting",
-  "playing": "Playing",
-  "singing": "Singing",
-  "workout": "Workout",
-  "painkiller": "Painkiller",
-  "sleepAid": "Sleep aid",
-  "bloodPressure": "Blood pressure regulator",
-  "cholesterol": "Cholesterol lowering",
-  "antacid": "Antacid",
-  "antibiotic": "Antibiotic",
-  "antiDiabetic": "Anti-diabetic",
-  "antiAnxiety": "Anti-anxiety",
-  "antidepressant": "Antidepressant"
+  "playing": "En jouant",
+  "singing": "En chantant",
+  "workout": "Entraînement",
+  "painkiller": "Anti douleur",
+  "sleepAid": "Aide-sommeil",
+  "bloodPressure": "Régulateur de pression artérielle",
+  "cholesterol": "Réduire le cholestérol",
+  "antacid": "Antiacide",
+  "antibiotic": "Antibiotique",
+  "antiDiabetic": "Anti-diabétique",
+  "antiAnxiety": "Anti-stress",
+  "antidepressant": "Antidépresseur"
 }
