fix: translation correction

--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -107,7 +107,7 @@
   "wakeTime": "Aufstehzeit:",
   "whatsOnYourMind": "Was hast du auf dem Herzen?",
   "yourWellbeing": "Dein Wohlbefinden",
-  "home": "Zuhause",
+  "home": "Start",
   "settings": "Einstellungen",
   "system": "System",
   "systemSubtitle": "Sprache, Thema, Version",
@@ -154,7 +154,7 @@
   "PinSet": "PIN erfolgreich eingestellt",
   "CannotDeleteFile": "Die Datei kann nicht gelöscht werden",
   "ImageNotFound": "Ooops, Bilddatei nicht gefunden",
-  "MaxLoginAttempts": "Versuche stattdessen das/ein Passwort einzugeben (das = if i already have the passwort i have to insert / ein = if I have to create a passwort) ",
+  "MaxLoginAttempts": "Versuche stattdessen das Passwort einzugeben",
   "NotEnoughSpace": "Nicht genügend Speicherplatz um Datei zu erstellen",
   "Minutes": "min",
   "Kilometers": "km",
@@ -162,7 +162,7 @@
   "water": "Wasser",
   "waterIntake": "Flüssigkeitsmenge",
   "movement": "Bewegung",
-  "move": "Bewegung (do you mean to move(verb?) then it would be: bewegen)",
+  "move": "Bewegen",
   "creativity": "Kreativität",
   "create": "kreieren",
   "meditationMinutes": "Meditation (Minuten)",
